--- a/src/assets/scss/_containers.scss
+++ b/src/assets/scss/_containers.scss
@@ -1,4 +1,4 @@
-@import 'mixins';
+@import "mixins";
 .g-container {
   overflow: hidden;
   position: relative;
@@ -8,17 +8,19 @@
   height: 100%;
   margin: 0 auto;
 }
-.g-header-container {
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: $tabbar-z-index;
-  width: 100%;
-}
+
 .g-view-container {
   height: 100%;
   padding-bottom: $tabbar-height;
 }
+.g-header-container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: $navbar-z-index;
+  width: 100%;
+}
+
 .g-footer-container {
   position: absolute;
   left: 0;
@@ -27,9 +29,13 @@
   width: 100%;
   box-shadow: 0 0 10px 0 hsla(0, 6%, 58%, 0.6);
 }
+
+
 .g-backtop-container {
   position: absolute;
   z-index: $backtop-z-index;
   right: 10px;
   bottom: $tabbar-height + 10px;
 }
+
+
